src/webui/src/sass/main.scss
/* ... */
.pagination { font-family: inherit; font-size: 1.2rem; text-transform: uppercase; margin-top: 2.8rem; margin-bottom: 2.6rem;
  .disabled { opacity: 0.5; }
  li { transition: all 0.3s ease-in-out; }
  li a { padding: 0.25rem 0.75rem; color: $button-black; border-color: $button-black; line-height: 1.8rem; }
  li a:hover { color: $button-black; border-color: $button-black; background-color: Transparent; }
}
.pagination * { border-radius: 0 !important; }
.content-box .excluded-allele h3 { margin-top: 0.7rem; }
.content-box { border: 1px dotted $half-black; padding: 2.0rem; margin: 1.3rem 0; margin-bottom: 0.3rem; margin-right: 1.3rem; min-width: 10rem; min-height: 8rem;
  .title { font-weight: 700; letter-spacing: 0.25rem; word-spacing: 0.5rem; font-size: 1.4rem; color: $header-black; margin: 0; margin-bottom: 1.3rem; margin-top: 0.3rem; text-transform: uppercase; }
  .title ~ .title { margin-top: 2.6rem; }
  h5, p { font-size: 1.4rem; color: black; }
  h5 { font-weight: 400; padding-right: 3.9rem; margin: 0.2rem 0; }
  p { font-weight: 300; margin: 0; }
  ul { font-size: 1rem; padding: 0; margin: 0.5rem 2rem; }
  .tabular-row { display: table-row; }
  .top-align { vertical-align: top; }
  .comment-title { width: 15rem; }
  .cell + .cell button { margin-left: 6.5rem; }
}
.content-box.full-width { width: 100%; display: flex; justify-content: space-between; align-items: center; }
.content-box.full-width.vertical { display: block;
  .cell.top-align { width: 15rem; }
  .cell { padding-top: 0.7rem; }
}
.question-set > .row:nth-child(even) { background-color: $blue-tint; }
.question-set { margin: 3.9rem auto; table-layout: fixed;
  .row { margin: 0; display: table-row; height: 8rem; }
  .title { padding-right: 2rem; text-align: right; width: 50%; }
  .check { padding-right: 0.7rem; width: 3.9rem; min-width: 3.9rem; }
  .controls { width: 50%;
    button { margin-left: 1.3rem; margin-top: 0.7rem; }
  }
  .btn { border-radius: 0; }
  .btn.active { box-shadow: none; background-color: $blue-button; }
  .btn-success { font-size: 1.2rem; font-weight: 500; text-transform: uppercase; letter-spacing: 0.2rem; padding: 0.25rem 0.75rem; color: $button-black; border: 1px solid $half-black; background-color: Transparent; }
  .centered { text-align: center; }
  h2 { font-size: 2rem; text-transform: uppercase; font-weight: 400; letter-spacing: 0.05rem; }
  h5 { font-size: 1.4rem; font-weight: 500; text-transform: uppercase; margin: 0; }
  p { font-size: 1.4rem; font-weight: 400; margin: 0; }
  textarea { width: 100%; font-size: 1.2rem; }
  .form-control { font-size: 1.2rem; font-weight: 500; text-transform: uppercase; letter-spacing: 0.2rem; padding: 0.25rem 0.75rem; color: $button-black; border: none; height: 2.6rem; box-shadow: none; border-radius: 0; margin-left: 0.7rem; margin-top: 2px; }
}
textarea.big { height: 25vh; margin: 2.6rem 0; }
.small.question-set { margin: 1.3rem auto;
  .non-cell { margin-bottom: 0.7rem; margin-top: 2.6rem; }
  .row { height: 4rem; }
}
.small.question-set > .row:nth-child(even) { background-color: white; }
.popover { font-family: "Source Sans Pro", sans-serif; border-radius: 0; }
.popover * { border-radius: 0; }
.popover-title { background-color: $blue-tint; font-weight: 600; text-transform: uppercase; }
$boring: hsla(50,35,75,1);
$green: hsla(140,35,75,1);
$seafoam: hsla(195,35,75,1);
$purple: hsla(250,35,75,1);
$pink: hsla(295,35,75,1);
.acmg { text-align: center; cursor: pointer; margin: 0 -2rem; color: white; opacity: 0.75; margin-bottom: -2rem; margin-top: 2rem;
  h4 { font-size: 1rem; font-weight: 600; text-transform: uppercase; letter-spacing: 0.1rem; padding: 0.7rem 0; margin: 0; }
  &.ba {  background-color: hsla(350,75,25,1); }
  &.bs {  background-color: hsla(300,75,25,1); }
  &.bp {  background-color: hsla(250,75,25,1); }
  &.re {  background-color: hsla(200,75,25,1); }
  &.pp {  background-color: hsla(150,75,25,1); }
  &.pm {  background-color: hsla(100,75,25,1); }
  &.ps {  background-color: hsla(50,75,25,1); }
  &.pvs { background-color: hsla(0,75,25,1); }
  &:hover { opacity: 0.99; transition: all 0.3s ease-in-out; }
}
.content-list { width: 100%; margin-right: 2.6rem;
  .analysis-row { border-bottom: 1px dotted $icon-half-black; margin-bottom: 2.6rem; }
  .analysis-row:last-child { margin-bottom: 1.3rem; }
  h3 { font-size: 1.4rem; font-weight: 500; letter-spacing: 0.035rem; text-transform: none; margin: 0; }
  p { font-size: 1.0rem; font-weight: 400; letter-spacing: 0.1rem; word-spacing: 1rem; text-transform: uppercase; margin: 0.6rem 0; }
}
.card-controls { z-index: -2; height: 4.8rem; text-align: right; background-color: #e6e6e6; margin-left: 1.3rem; margin-right: 1.3rem; padding-left: 2.6rem; padding-right: 2.6rem; padding-top: 1.3rem; margin-bottom: 7rem; display: flex; justify-content: flex-end;
  .left { margin-right: auto; }
  button ~ button { margin-left: 1.3rem; }
  .grouped-controls { display: flex; }
  .control-outline { margin-right: 0.7rem; border: 1px solid $half-black; }
  .form-control { font-size: 1.2rem; font-weight: 500; text-transform: uppercase; letter-spacing: 0.2rem; padding: 0.25rem 0.75rem; background-color: Transparent; color: $button-black; border: none; height: 2.5rem; box-shadow: none; border-radius: 0; }
}
.card-controls.collapsed { height: 0rem; }

.app .content { margin-left: 42rem; margin-right: 7rem; margin-top: 8rem; }
.app .search-area { margin-left: 42rem; }
.modal-content { background-color: Transparent; box-shadow: none; border-radius: 0px; border: 0; }
.modal-dialog { margin: 5vh 10vw; width: auto; }
.modal-lg { width: inherit; }
.modal-backdrop { bottom: 0; position: fixed; }
.interpretation-bar { margin-bottom: 3.9rem; margin-top: -2.4rem; display: flex; justify-content: flex-end;
  input { width: 20rem; }
  .left { margin-right: auto; }
  button { margin-left: 1.3rem; }
}
.interpretation { margin-top: 8rem; }
/* ... */

